--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 											<h3><a href="">Character Concepts</a></h3>
 											<span>Featuring original characters from the Lavender Girl novel, original characters from Fading Sphere, and more to come.</span>
 											<p class="icon">
-												<span><a href="https://www.deviantart.com/resphere-n/gallery/92981888/character-concepts" class="btn btn-primary"><i class="icon-eye"></i>&nbsp;See Gallery</a></span>
+												<span><a href="https://www.deviantart.com/resphere-n/gallery/92981888/character-concepts" target="_blank" class="btn btn-primary"><i class="icon-eye"></i>&nbsp;See Gallery</a></span>
 											</p>
 										</div>
 									</div>
