--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
 	</head>
 	<body>
+
 	<div id="colorlib-page">
 		<div class="container-wrap">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
@@ -95,7 +96,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/homebg2.png); background-size: contain; background-position: bottom; background-repeat: no-repeat;">
+				   	<li style="background-image: url(images/1.jpg); background-size: contain; background-position: bottom; background-repeat: no-repeat;">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -198,7 +199,12 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</span>
 								<div class="desc">
 									<h3>Software Development</h3>
-									<p style="margin-top: -1.5em; margin-bottom: -0.2em;">Develop & Publish <br> -Unity/Javascript Games <br> -Web/Apps </p>
+									<p style="margin-top: -1.5em; margin-bottom: -0.2em;">
+										Web/App Development in Unity & JavaScript <br>
+										- Reliable, Clean Code <br>
+										- Custom Game Design <br>
+										- Version Control with Git
+									</p>
 								</div>
 							</div>
 						</div>
@@ -209,7 +215,12 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</span>
 								<div class="desc">
 									<h3>Graphic Design</h3>
-									<p style="margin-top: -1.5em; margin-bottom: -0.2em;">Video Thumbnails <br> Novel Covers <br> Simple Art Assets</p>
+									<p style="margin-top: -1.5em; margin-bottom: -0.2em;">
+										Tailored Visual Assets <br>
+										- Video Thumbnails <br>
+										- Novel Covers <br>
+										- Simple Art Assets
+									</p>
 								</div>
 							</div>
 						</div>
@@ -220,7 +231,12 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</span>
 								<div class="desc">
 									<h3>Content Creation</h3>
-									<p style="margin-top: -1.5em; margin-bottom: -0.2em;">Script Writing<br>Video Editing<br>Simple 2D Animations</p>
+									<p style="margin-top: -1.5em; margin-bottom: -0.2em;">
+										Engaging Media Content <br>
+										- Script Writing <br>
+										- Video Editing <br>
+										- Simple 2D Animations
+									</p>
 								</div>
 							</div>
 						</div>
@@ -230,8 +246,13 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<i class="icon-bulb"></i>
 								</span>
 								<div class="desc">
-									<h3>Innovative Ideas</h3>
-									<p style="margin-top: -1.5em; margin-bottom: -0.2em;">Character Concepts <br> Storytelling <br> Creative Writing</p>
+									<h3>Creative Solutions</h3>
+									<p style="margin-top: -1.5em; margin-bottom: -0.2em;">
+										Innovative Concepts <br>
+										- Character Design <br>
+										- Storytelling <br>
+										- Creative Writing
+									</p>
 								</div>
 							</div>
 						</div>
