--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/1.jpg); background-size: contain; background-position: bottom; background-repeat: no-repeat;">
+				   	<li style="background-image: url(images/withhand.png);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
