--- a/index.html
+++ b/index.html
@@ -584,18 +584,17 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 																	<i class="icon-briefcase3"></i></a></p>
 															</div>
 														</div>
-														<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-															<div class="project" style="background-image: url(images/port.png);">
+														<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+															<div class="project" style="background-image: url(images/foodinjar.png);">
 																<div class="desc">
 																	<div class="con">
-																		<h3><a href="">Unity Fundamentals (Showcase)</a></h3>
-																		<span>Explore Unity fundamentals with 3D/2D scenes, programming, and immersive audio. Includes 3 bonus scenes.
+																		<h3><a href="">Food in Jar (Game)</a></h3>
+																		<span>Cut the food in the jar so you can eat it.
 																			<br>
-																			<br>Controls: Arrow keys/WASD to move.
+																			<br>Controls: Swipe to cut food, avoid bones.
 																		</span>
 																		<p class="icon">
-																			<span><a href="https://play.unity.com/en/games/6acc6c36-6807-49d0-87d4-af862d5a64ab/grinding-unity-exp-with-unity-chan" target="_blank" class="btn btn-primary"><i class="icon-play4"></i>&nbsp;Play Game</a></span>
-																		</p>
+																			<span><a href="https://play.unity.com/en/games/a1005a00-62cb-4c17-abef-66d4b857945a/food-in-jar" target="_blank" class="btn btn-primary"><i class="icon-play4"></i>&nbsp;Play Game</a></span>											</p>
 																	</div>
 																</div>
 															</div>
@@ -660,17 +659,18 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 																</div>
 															</div>
 														</div>
-														<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-															<div class="project" style="background-image: url(images/farmfoxhero.png);">
+														<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+															<div class="project" style="background-image: url(images/port.png);">
 																<div class="desc">
 																	<div class="con">
-																		<h3><a href="">Farm Fox Hero (Game)</a></h3>
-																		<span>Deliver energy drinks swiftly as the farm fox.
+																		<h3><a href="">Unity Fundamentals (Showcase)</a></h3>
+																		<span>Explore Unity fundamentals with 3D/2D scenes, programming, and immersive audio. Includes 3 bonus scenes.
 																			<br>
-																			<br>Controls: WASD/Arrow keys to move; Space to give energy drinks.
+																			<br>Controls: Arrow keys/WASD to move.
 																		</span>
 																		<p class="icon">
-																			<span><a href="https://play.unity.com/en/games/a897f507-1ee0-4a71-940b-87ac62c7dbce/farm-fox-hero" target="_blank" class="btn btn-primary"><i class="icon-play4"></i>&nbsp;Play Game</a></span>											</p>
+																			<span><a href="https://play.unity.com/en/games/6acc6c36-6807-49d0-87d4-af862d5a64ab/grinding-unity-exp-with-unity-chan" target="_blank" class="btn btn-primary"><i class="icon-play4"></i>&nbsp;Play Game</a></span>
+																		</p>
 																	</div>
 																</div>
 															</div>
